Fix alignment for mobile

--- a/src/components/ApplicationCardLargeV2/ApplicationCardLargeV2.css
+++ b/src/components/ApplicationCardLargeV2/ApplicationCardLargeV2.css
@@ -2,7 +2,7 @@
     border: solid 1px #261d2b;
     border-radius: 18px;
     max-width: 100%;
-    max-height: 100%;
+    height: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
